[tool.poetry]
name = "repl-nix-integralvisualizer"
version = "0.1.0"
description = ""
authors = ["Burny"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
numpy = "^2.1.1"
sympy = "^1.13.2"
plotly = "^5.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
